@@ -13,15 +13,16 @@
     <url>https://memoria.io</url>
 
     <organization>
+
         <name>memoria.io</name>
         <url>https://memoria.io</url>
     </organization>
 
     <properties>
         <!--Java and Maven -->
-        <java.version>18</java.version>
+<!--        <java.version>18</java.version>-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <argLine>--enable-preview</argLine>
+<!--        <argLine>&#45;&#45;enable-preview</argLine>-->
         <!--Compile dependencies -->
         <logging.version>2.17.2</logging.version>
 
@@ -117,25 +118,6 @@
             </plugins>
         </pluginManagement>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>enforce-maven</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireMavenVersion>
-                                    <version>3.8.5</version>
-                                </requireMavenVersion>
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
             <!--======================================================================================== -->
             <!-- Building Plugins   -->
             <!--======================================================================================== -->
@@ -147,9 +129,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>18</source>
-                    <target>18</target>
-                    <release>18</release>
+                    <release>17</release>
                     <fork>true</fork>
                     <forceJavacCompilerUse>true</forceJavacCompilerUse>
                     <showDeprecation>true</showDeprecation>
